# collective-decision-making-argos-ros2

./: CMakeLists.txt  package.xml
argos_worlds/: construct.argos  debug.argos  demo-mine.argos  world.argos
launch/: launch_demo.sh
msg/: PuckList.msg
plugins/: CMakeLists.txt
plugins/argos_ros2_foot_bot/: CMakeLists.txt  argos_ros_footbot.cpp  argos_ros_footbot.h
plugins/loop_functions/: CMakeLists.txt  trajectory_loop_functions.cpp  trajectory_loop_functions.h  util.cpp  util.h
scripts/: controller.cpp  demo_controller.py
